--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br" xmlns:th="http://www.thymeleaf.org" th:replace="fragments/layout :: layout(~{::title}, ~{::#content})">
 <head>
+    <meta charset="UTF-8">
     <title>GoService | Home</title>
     <link rel="stylesheet" href="css/styles.css" type="text/css">
 </head>
