--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -25,14 +25,15 @@
 
     <div class="container">
         <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+            <img src="assets/img/logos/3.png" alt="Logo GoService" class="logo-image">
             <p class="col-md-4 mb-0 text-body-secondary">© 2023 Company, SoulCode</p>
 
-            <a href="/"
-               class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
-                <svg class="bi me-2" width="40" height="32">
-                    <img src="https://cdn-icons-png.flaticon.com/512/2412/2412859.png" alt="Ícone" id="logo">
-                </svg>
-            </a>
+<!--            <a href="/"-->
+<!--               class="col-md-4 d-flex align-items-center justify-content-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">-->
+<!--                <svg class="bi me-2" width="40" height="32">-->
+<!--                    <img src="https://cdn-icons-png.flaticon.com/512/2412/2412859.png" alt="Ícone" id="logo">-->
+<!--                </svg>-->
+<!--            </a>-->
 
             <ul class="nav col-md-4 justify-content-end">
                 <li class="nav-item"><a href="/" class="nav-link px-2 text-body-secondary">Home</a></li>
