--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -2,45 +2,57 @@
     <div class="container">
         <div class="d-flex gap-3 align-items-center justify-content-center justify-content-lg-start">
             <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-dark text-decoration-none">
-<!--                <img src="assets/img/logos/2.png" alt="Logo GoService" class="logo-image">-->
+                <img src="assets/img/logos/3.png" alt="Logo GoService" class="logo-image">
                 <h1>GoService</h1>
             </a>
 
             <ul class="nav flex-grow-1 mb-2 mb-md-0">
                 <!-- ADM -->
-                <div class="dropdown me-3" th:if="${#authorization.expression('isAuthenticated() and hasRole(''ROLE_ADMIN'')')}">
-                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="dropdown me-3"
+                     th:if="${#authorization.expression('isAuthenticated() and hasRole(''ROLE_ADMIN'')')}">
+                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                         Administrador
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/admin/dados">Dados Cadastrais</a></li>
                         <li><a class="dropdown-item" href="/admin/dashboard">Dashboard</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="/admin/servicos">Serviços</a></li>
                         <li><a class="dropdown-item" href="/admin/usuarios">Usuários</a></li>
                     </ul>
                 </div>
                 <!-- PRESTADOR -->
-                <div class="dropdown me-3" th:if="${#authorization.expression('isAuthenticated() and hasRole(''ROLE_PRESTADOR'')')}">
-                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="dropdown me-3"
+                     th:if="${#authorization.expression('isAuthenticated() and hasRole(''ROLE_PRESTADOR'')')}">
+                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                         Prestador
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/prestador/dados">Dados Cadastrais</a></li>
                         <li><a class="dropdown-item" href="/prestador/endereco">Endereço</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="/prestador/agenda">Agenda de Serviços</a></li>
                     </ul>
                 </div>
                 <!-- CLIENTE -->
-                <div class="dropdown me-3" th:if="${#authorization.expression('isAuthenticated() and hasRole(''ROLE_CLIENTE'')')}">
-                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                <div class="dropdown me-3"
+                     th:if="${#authorization.expression('isAuthenticated() and hasRole(''ROLE_CLIENTE'')')}">
+                    <button class="btn btn-light dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">
                         Cliente
                     </button>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="/cliente/dados">Dados Cadastrais</a></li>
                         <li><a class="dropdown-item" href="/cliente/endereco">Endereço</a></li>
-                        <li><hr class="dropdown-divider"></li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item" href="/cliente/agendar">Agendar Serviço</a></li>
                         <li><a class="dropdown-item" href="/cliente/historico">Histórico de Serviços</a></li>
                     </ul>
@@ -53,12 +65,16 @@
             </div>
 
             <div class="dropdown text-end" th:if="${#authorization.expression('isAuthenticated()')}">
-                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-                    <img src="https://w7.pngwing.com/pngs/268/996/png-transparent-account-avatar-profile-profile-icon-profile-picture-user-user-profile-business-and-management-line-icon-thumbnail.png" alt="mdo" width="32" height="32" id="photo" class="rounded-circle">
+                <a href="#" class="d-block link-body-emphasis text-decoration-none dropdown-toggle"
+                   data-bs-toggle="dropdown" aria-expanded="false">
+                    <img src="https://w7.pngwing.com/pngs/268/996/png-transparent-account-avatar-profile-profile-icon-profile-picture-user-user-profile-business-and-management-line-icon-thumbnail.png"
+                         alt="mdo" width="32" height="32" id="photo" class="rounded-circle">
                 </a>
                 <ul class="dropdown-menu text-small">
                     <li><a class="dropdown-item" href="/auth/password/new">Editar Senha</a></li>
-                    <li><hr class="dropdown-divider"></li>
+                    <li>
+                        <hr class="dropdown-divider">
+                    </li>
                     <li>
                         <form method="post" th:action="@{/logout}">
                             <button class="dropdown-item" type="submit">Logout</button>
