--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,33 +1,35 @@
-*{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
 
-#box{
+#box {
     display: flex;
     justify-content: center;
     align-items: center;
-    position: fixed;
-    bottom: 0;
-    margin-top: 20px;
+    /*position: fixed;*/
     width: 100%;
     height: 80px;
     background-color: white;
-    z-index:2;
 }
 
-.logo-image{
-width: 80px;
-height:auto;
+.logo-image {
+    width: 80px;
+    height: auto;
 }
 
-.mainBox{
-    padding-bottom: 75px;
+.mainBox {
+    padding-bottom: 80px; /* Altere a margem inferior para corresponder à altura do footer */
+}
+
+.card h-100 {
+    width: 18rem;
+    margin-top: 20px; /* Adicione margem superior para os cartões */
+    margin-bottom: 20px; /* Adicione margem inferior para os cartões */
 }
 #carouselExampleFade{
-    margin-top: 20px;
+ margin-top: 20px;
     width: 100%;
-    height: 80%;
     z-index: 1;
 }
